Db population with some values.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.thymeleaf.cache=false
+spring.jpa.defer-datasource-initialization = true
+spring.sql.init.mode=always
+spring.sql.init.platform=h2
+spring.sql.init.data-locations=classpath:data/data-h2.sql
 # H2 Database
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2console/
